--- a/vigilantebot/data_models_examples/.env_example
+++ b/vigilantebot/data_models_examples/.env_example
@@ -1,5 +1,5 @@
 DISCORD_TOKEN=YOUR_TOKEN_ID
-DISCORD_GUILD=Name Of Your Server
+PRIVATE_GUILD_ID=123456
 DISCORD_GUILD_IDS=123456789123,123456789124,SET_TO_NONE_FOR_GLOBAL_USAGE
 DISCORD_ALLOWED_CHANNELS=123456789123,123456789124
 DISCORD_ALLOWED_ROLES=admin,owner,moderator
