--- a/vigilantebot/vigilantebot.service
+++ b/vigilantebot/vigilantebot.service
@@ -2,12 +2,12 @@
 Description=Vigilante Discord Bot
 
 [Service]
-ExecStart=~/bots/vigilantebot/vigilantebot/run_discord_bot.py
+ExecStart=/home/bots/vigilantebot/vigilantebot/run_discord_bot.py
 Restart=always
 TimeoutSec=60
 User=nobody
 Group=nogroup
-WorkingDirectory=~/bots/vigilantebot/vigilantebot
+WorkingDirectory=/home/bots/vigilantebot/vigilantebot
 
 [Install]
 WantedBy=multi-user.target
