Separate discord guilds on execution: logs, data and targets

--- a/vigilantebot/data_models_examples/.env_example
+++ b/vigilantebot/data_models_examples/.env_example
@@ -1,5 +1,7 @@
+# global .env
 DISCORD_TOKEN=YOUR_TOKEN_ID
-PRIVATE_GUILD_ID=123456
-DISCORD_GUILD_IDS=123456789123,123456789124,SET_TO_NONE_FOR_GLOBAL_USAGE
+# .env_GUILD_ID
+GUILD_NAME=Guild Name
+DISCORD_GUILD_ID=123456789123
 DISCORD_ALLOWED_CHANNELS=123456789123,123456789124
 DISCORD_ALLOWED_ROLES=admin,owner,moderator
